src/tests/InvalidTests/TestRotate_Invalid.agl
# 'rotate' identifier (',' identifier)* 'by' expression ';'

view : View with {
    Ox = -450;
    Oy = 0;
    width = 401;
    height = 401;
    title = "Illustrating a moving pacman";
    background = "alice blue";
}

rotate view by 0.1; # deve dar erro! não podemos rodar view's.
